--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,13 @@ dependencies = [
     "fastapi>=0.111.0",
     "pydantic>=2.7.4",
     "typer>=0.12.3",
+    "fastapi-jwt-auth3>=0.3.0",
+    "beanie>=1.26.0",
+    "pydantic-settings>=2.3.3",
+    "pytz>=2024.1",
+    "toml>=0.10.2",
+    "ujson>=5.10.0",
+    "httpx>=0.27.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
