google fully working

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "toml>=0.10.2",
     "ujson>=5.10.0",
     "httpx>=0.27.0",
+    "uvicorn>=0.30.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
