--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "httpx>=0.27.0",
     "uvicorn>=0.30.1",
     "python-slugify[unidecode]>=8.0.4",
+    "coolname>=2.2.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
